--- a/Entregable/cliente.ipynb
+++ b/Entregable/cliente.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -65,32 +65,33 @@
      "output_type": "stream",
      "text": [
       "Client: Ready to play.\n",
-      "Server: Question 1 - Which alternative rock band from the United States released the studio album 'Everything Will Be Alright in the End'?\n",
-      "1. Weezer\n",
-      "2. The Black Keys\n",
-      "3. LMFAO\n",
-      "4. Static-X\n",
-      "Client: Your answer is Weezer.\n",
+      "Server: Question 1 - What country did the allies invade in World War II's Operation Avalanche? \n",
+      "1. France\n",
+      "2. Spain\n",
+      "3. Italy\n",
+      "4. Germany\n",
+      "Client: Your answer is Italy.\n",
       "Server: Correct answer. Congratulations! \n",
       "\n",
-      "Server: Question 2 - Which actor has appeared in both Spider-Man and Roseanne?\n",
-      "1. Hugo Weaving\n",
-      "2. Warwick Davis\n",
-      "3. Tobey Maguire\n",
-      "4. Timothy Spall\n",
-      "Client: Your answer is Tobey.\n",
-      "Server: Incorrect answer. The correct answer is Tobey Maguire. \n",
+      "Server: Question 2 - Who Is Considered As The Originator Of The Concept Of A Computer?\n",
+      "1. Leonard Adleman\n",
+      "2. Charles Babbage\n",
+      "3. John Atanasoff\n",
+      "4. Ada Lovelace\n",
+      "Client: Your answer is Ada Lovelace.\n",
+      "Server: Incorrect answer. The correct answer is Charles Babbage. \n",
       "\n",
-      "Server: Question 3 - Who was the longest-reigning sultan of the Ottoman Empire?\n",
-      "1. Osman I\n",
-      "2. Murad IV\n",
-      "3. Mehmed II\n",
-      "4. Suleiman I\n",
-      "Client: Your answer is Osman.\n",
-      "Server: Incorrect answer. The correct answer is Suleiman I. \n",
+      "Server: Question 3 - What is Paleontology the study of?\n",
+      "1. enzymes\n",
+      "2. the kidneys and their diseases, a branch of medicine\n",
+      "3. ants\n",
+      "4. fossils of ancient life\n",
+      "Client: Your answer is fossils of ancient life.\n",
+      "Server: Correct answer. Congratulations! \n",
       "\n",
       "\n",
-      " Your final score is 1/3.\n"
+      "Your final score is 2/3.\n",
+      "Thanks for playing!\n"
      ]
     }
    ],
@@ -110,13 +111,14 @@
     "try:\n",
     "    print(\"Client: Ready to play.\")\n",
     "    for i in range(NUM_QUESTIONS):\n",
-    "        # Send initial message to server\n",
+    "        # Send message to server to get a question\n",
     "        msg = \"Ready to play\"\n",
-    "        send_to_server = (msg, number_client)\n",
-    "        socket_cliente.sendto(pickle.dumps(send_to_server), (ip_address, port_number))\n",
+    "        send_to_server(msg, number_client, ip_address, port_number, socket_cliente)\n",
+    "                   \n",
+    "\n",
     "\n",
     "        # Receive question from server\n",
-    "        bytes_rx, _ = socket_cliente.recvfrom(1024)\n",
+    "        bytes_rx = receive_from_server(socket_cliente)\n",
     "        pregunta_texto, posibles_respuestas = pickle.loads(bytes_rx)\n",
     "        print(\"Server: Question \" + str(i + 1) + \" - \" + pregunta_texto)\n",
     "        for idx, respuesta in enumerate(posibles_respuestas):\n",
@@ -128,7 +130,7 @@
     "        print(\"Client: Your answer is\", respuesta_usuario +\".\")\n",
     "\n",
     "        # Receive result from server\n",
-    "        bytes_rx, _ = socket_cliente.recvfrom(1024)\n",
+    "        bytes_rx = receive_from_server(socket_cliente)\n",
     "        resultado = pickle.loads(bytes_rx)\n",
     "        print(resultado)\n",
     "\n",
@@ -136,8 +138,12 @@
     "        if \"Correct answer\" in resultado:\n",
     "            user_score += 1\n",
     "\n",
+    "    # Send exit message to server\n",
+    "    msg = \"Exit\"\n",
+    "    send_to_server = (msg, number_client)\n",
+    "\n",
     "    # Print final score\n",
-    "    print(f\"\\n Your final score is {user_score}/{NUM_QUESTIONS}.\")\n",
+    "    print(f\"\\nYour final score is {user_score}/{NUM_QUESTIONS}.\")\n",
     "    print(\"Thanks for playing!\")\n",
     "\n",
     "except socket.timeout:\n",
