Random client id

--- a/Entregable/cliente.ipynb
+++ b/Entregable/cliente.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -65,29 +65,29 @@
      "output_type": "stream",
      "text": [
       "Client: Ready to play.\n",
-      "Server: Question 1 - What country did the allies invade in World War II's Operation Avalanche? \n",
-      "1. France\n",
-      "2. Spain\n",
-      "3. Italy\n",
-      "4. Germany\n",
-      "Client: Your answer is Italy.\n",
+      "Server: Question 1 - What was the name of the iconic '90s film where Julia Roberts plays a prostitute who is hired by a wealthy entrepreneur?\n",
+      "1. Runaway Bride\n",
+      "2. Pretty Woman\n",
+      "3. My Best Friend's Wedding\n",
+      "4. Maid in Manhattan\n",
+      "Client: Your answer is Pretty Woman.\n",
       "Server: Correct answer. Congratulations! \n",
       "\n",
-      "Server: Question 2 - Who Is Considered As The Originator Of The Concept Of A Computer?\n",
-      "1. Leonard Adleman\n",
-      "2. Charles Babbage\n",
-      "3. John Atanasoff\n",
-      "4. Ada Lovelace\n",
-      "Client: Your answer is Ada Lovelace.\n",
-      "Server: Incorrect answer. The correct answer is Charles Babbage. \n",
-      "\n",
-      "Server: Question 3 - What is Paleontology the study of?\n",
-      "1. enzymes\n",
-      "2. the kidneys and their diseases, a branch of medicine\n",
-      "3. ants\n",
-      "4. fossils of ancient life\n",
-      "Client: Your answer is fossils of ancient life.\n",
+      "Server: Question 2 - What is the sound that is caused by a bolt of lightning?\n",
+      "1. Sonar\n",
+      "2. Clang\n",
+      "3. Thunder\n",
+      "4. Gong\n",
+      "Client: Your answer is Thunder.\n",
       "Server: Correct answer. Congratulations! \n",
+      "\n",
+      "Server: Question 3 - If A Sparkling Wine Is Labelled As 'Brut' How Will It Taste?\n",
+      "1. Light\n",
+      "2. Sweet\n",
+      "3. Fruity\n",
+      "4. Dry \n",
+      "Client: Your answer is Fruity.\n",
+      "Server: Incorrect answer. The correct answer is Dry . \n",
       "\n",
       "\n",
       "Your final score is 2/3.\n",
@@ -102,7 +102,7 @@
     "# Server address and port\n",
     "ip_address = \"127.0.0.1\"\n",
     "port_number = 6969\n",
-    "number_client = 1\n",
+    "number_client = random.randint(1, 100)\n",
     "\n",
     "user_score = 0\n",
     "# Set timeout for the socket\n",
@@ -140,7 +140,7 @@
     "\n",
     "    # Send exit message to server\n",
     "    msg = \"Exit\"\n",
-    "    send_to_server = (msg, number_client)\n",
+    "    send_to_server(msg, number_client, ip_address, port_number, socket_cliente)\n",
     "\n",
     "    # Print final score\n",
     "    print(f\"\\nYour final score is {user_score}/{NUM_QUESTIONS}.\")\n",
