--- a/Entregable/servidor.ipynb
+++ b/Entregable/servidor.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server: Client 29 has left the game.\n",
+      "Server: Client 37 has left the game.\n",
+      "Server: Client 29 has left the game.\n",
+      "Server: Client 70 has left the game.\n",
+      "Server: Client 81 has left the game.\n",
+      "Server: Client 80 has left the game.\n",
+      "Server: Client 34 has left the game.\n"
+     ]
+    }
+   ],
    "source": [
     "import socket\n",
     "import pickle\n",
